Fixed (?) some input weirdness on mobile

--- a/src/GameCorner/wwwroot/css/custom.css
+++ b/src/GameCorner/wwwroot/css/custom.css
@@ -12,10 +12,10 @@
     margin: 1rem 0;
 }
 
-.buf {
+/*.buf {
     width: 16rem;
     padding: .5rem .75rem;
-}
+}*/
 
 .hex {
     position: relative;
